# uni

./: .gitignore  .gitmodules  BOOST_INSTALL.md  MAKE_CMAKE_INSTALL.md  README.md
Databases_1/UniDatabase/: create_tables.sql  fill_tables.sql
Dyn_Data_Structures/Lab/BST/: Makefile
Dyn_Data_Structures/Lab/Doubly_Linked_List/: Makefile
Dyn_Data_Structures/Lab/Graph/: Makefile
Dyn_Data_Structures/Lab/Queue_Reqs/: Makefile
Dyn_Data_Structures/Lab/Tree/: Makefile
Programming_1/Lab/Bingo/: Bingo.cpp
Programming_1/Theory/Blackjack/: Blackjack  Blackjack.cpp
Programming_2/Lab/Bank/: CMakeLists.txt  README.md
Programming_2/Lab/Bank/data/: title.txt
Programming_2/Lab/Bank/src/: main.cpp
Programming_2/Lab/Bank/src/lib/: structs.h
Programming_2/Lab/Bank/src/lib/client_ops/: CMakeLists.txt
Programming_2/Lab/Bank/src/lib/file_ops/: CMakeLists.txt  file_ops.cpp  file_ops.h
Programming_2/Lab/Bank/src/lib/frag_ops/: frag_ops.cpp  frag_ops.h
Programming_2/Lab/Bank/src/lib/list/: list.h
Programming_2/Lab/Bank/src/lib/merge_sort/: merge_sort.cpp
Programming_2/Lab/Bank/src/lib/misc/: misc.cpp  misc.h
Programming_2/Lab/Bank/src/lib/search_ops/: search_ops.cpp  search_ops.h
Programming_2/Lab/Bank/src/lib/store_frag/: CMakeLists.txt  store_frag.cpp  store_frag.h
Programming_2/Lab/Bank/src/lib/store_movie/: store_movie.cpp
Programming_2/Lab/Bank/src/lib/transaction/: transaction.cpp  transaction.h
Programming_2/Lab/Bank/src/test/: rand_gen.cpp  test.h
Programming_2/Notes/: search_algs_esp.md  sorting_algs_esp.md
Programming_2/Theory/Blockbuster/: CMakeLists.txt  Makefile  README.md  compile.sh
Programming_2/Theory/Blockbuster/data/: title.txt
Programming_2/Theory/Blockbuster/src/: main.cpp  some.cpp  structs.h
Programming_2/Theory/Blockbuster/src/lib/: basic_defs.h  structs.h
Programming_2/Theory/Blockbuster/src/lib/bin_search/: CMakeLists.txt  bin_search.cpp  bin_search.h
Programming_2/Theory/Blockbuster/src/lib/file_ops/: file_ops.cpp  file_ops.h
Programming_2/Theory/Blockbuster/src/lib/frag_ops/: frag_ops.cpp  frag_ops.h
Programming_2/Theory/Blockbuster/src/lib/list/: CMakeLists.txt
Programming_2/Theory/Blockbuster/src/lib/merge_sort/: CMakeLists.txt  merge_sort.cpp  merge_sort.h
Programming_2/Theory/Blockbuster/src/lib/misc/: misc.cpp  misc.h
Programming_2/Theory/Blockbuster/src/lib/rent_movie/: CMakeLists.txt  rent_movie.cpp  rent_movie.h
Programming_2/Theory/Blockbuster/src/lib/search_ops/: CMakeLists.txt  search_ops.cpp  search_ops.h
Programming_2/Theory/Blockbuster/src/lib/store_frag/: store_frag.cpp
Programming_2/Theory/Blockbuster/src/lib/store_movie/: CMakeLists.txt  store_movie.cpp  store_movie.h
Programming_2/Theory/SimpleGrep/: Makefile  README.md
Tools/Cpp/: random_gen.cpp  random_gen.h
ai/car-business-rpa/: README.md  main.py  requirements.txt  whatsapp_config.env.sample
ai/car-business-rpa/utils/: visualizer.py  whatsapp_sender.py
ai/facial-recognition/: README.md  app.py  camera_local.py  requirements.txt
ai/receipt-manager/: .env.example  .gitignore  database.py  main.py  notifications.py  ocr_engine.py  receipts.db
compilers-design/BST/: Makefile
compilers-design/BST/src/: main.cpp
compilers-design/Graph/src/: main.cpp
compilers-design/alkemy/: .gitignore  Cargo.toml
compilers-design/alkemy/src/: constants.rs  generator.rs  lib.rs  main.rs  parser.rs  prelude.rs  settings.rs
compilers-design/astral/: Cargo.toml
compilers-design/lexical-analyzer/: Cargo.toml
compilers-design/linked-list/: Makefile
compilers-design/suugaku/: Cargo.toml
cryptography/crypto-math-fundamentals/: Cargo.toml
cryptography/hash-functions/: Cargo.toml
databases-1/UniDatabase/: create_view.sql  queries.sql
databases-2/: chatbot-solution.md
frameworks/clox/: .gitignore  README.md  angular.json  environment.ts  package-lock.json  package.json
frameworks/echo/: index.html  package.json
operating-systems/fifo-lifo-rr/: Cargo.toml
programming-2/Notes/: search_algs_esp.md  sorting_algs_esp.md
programming-practices/db-connection-pool/: Configuration.cs  Connection.cs  Pool.cs  PoolManager.cs  Program.cs  db-connection-pool.csproj  db-connection-pool.sln
programming-practices/db-load-sim-cs/: Program.cs  db-load-sim-cs.csproj  db-load-sim-cs.sln
programming-practices/db-load-sim-rs/: Cargo.toml
programming-practices/db-load-sim-rs/config/: config.toml
programming-practices/db-load-sim-rs/data/: mock_data.sql
programming-practices/db-load-sim-rs/src/: lib.rs  main.rs  mock_data.rs  prelude.rs  settings.rs
programming-practices/dbcomponent/: .gitignore  Config.cs  Connection.cs  DBComponent.cs  Pool.cs  PoolManager.cs  Program.cs  dbcomponent.csproj  dbcomponent.sln
web-1/button-component/: CustomButton.js  index.html
web-1/canva-practice/: index3.html
web-1/decoupled-fm/: package-lock.json  package.json
web-1/soundown/: index.html  package-lock.json  package.json
web-1/wasm-game-of-life/: Cargo.toml  README.md
web-1/white-space/: AudioPlayer.js  Collider.js  CollisionSystem.js  Game.js  GameCamera.js  GameObject.js  Input.js  Key.js  KeyEvent.js  LightSource.js  LightSystem.js  Lives.js  MovementAnimator.js  RedHandAI.js  Room.js  Something.js  SomethingAI.js  Trigger.js  index.css
web-2/session/: package.json  tsconfig.json
web-clients-langs/context-menu/: ContextMenu.js  index.html  styles.css
web-clients-langs/edit/: edit.js  index.html  style.css
web-clients-langs/matrices/: main.js
web1/button-component/: index.html
web1/canva-practice/: index.html  index2.html
web1/wasm-game-of-life/: Cargo.toml  LICENSE_MIT
web1/white-space/: Animator.js  AudioPlayer.js  Canvas.js  Collider.js  CollisionSystem.js  Controller.js  Dialogue.js  DialogueBox.js  Door.js  FadeText.js  Flash.js  Game.js  GameCamera.js  GameObject.js  Input.js  Key.js  Laptop.js  Lightbulb.js  Mewo.js  Player.js  RandomSpawner.js  Rect.js  RedHand.js  Room.js  Shadow.js  Sketchbook.js  Something.js  SomethingAI.js  Tissuebox.js  Trigger.js  Vector.js  Vignette.js  game.html  index.css  index.html
(+445 files in other folders)
