[package]
name = "db-load-sim-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = "4.5.38"
colored = "3.0.0"
config = "0.15.11"
fake = { version = "4.3.0", features = ["derive"] }
humantime = "2.2.0"
postgres = "0.19.10"
serde = { version = "1.0.219", features = ["derive"] }
